--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,46 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "php": "^7.3|^8.0",
-        "laravel/lumen-framework": "^8.0",
-        "sofa/eloquence-mappable": "^7.0"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "RetinaLyze\\": "app/RetinaLyze/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/"
-        ]
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
-    }
+	"name" : "laravel/lumen",
+	"description" : "The Laravel Lumen Framework.",
+	"keywords" : [
+		"framework",
+		"laravel",
+		"lumen"
+	],
+	"license" : "MIT",
+	"type" : "project",
+	"require" : {
+		"php" : "^7.3|^8.0",
+		"laravel/lumen-framework" : "^8.0",
+		"sofa/eloquence-mappable" : "^7.0",
+		"defuse/php-encryption" : "^2.0"
+	},
+	"require-dev" : {
+		"fakerphp/faker" : "^1.9.1",
+		"mockery/mockery" : "^1.3.1",
+		"phpunit/phpunit" : "^9.3"
+	},
+	"autoload" : {
+		"psr-4" : {
+			"App\\" : "app/",
+			"RetinaLyze\\" : "app/RetinaLyze/",
+			"Database\\Factories\\" : "database/factories/",
+			"Database\\Seeders\\" : "database/seeders/",
+			"Defuse\\Crypto\\" : "vendor/defuse/php-encryption/src/"
+		}
+	},
+	"autoload-dev" : {
+		"classmap" : [
+			"tests/"
+		]
+	},
+	"config" : {
+		"preferred-install" : "dist",
+		"sort-packages" : true,
+		"optimize-autoloader" : true
+	},
+	"minimum-stability" : "dev",
+	"prefer-stable" : true,
+	"scripts" : {
+		"post-root-package-install" : "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+	}
 }
